# montblanc_pipeline

./: .env.example  .gitignore  README.md  databricks.yml  pyproject.toml
.github/workflows/: cicd.yml
infrastructure/: main.tf  terraform.tfvars.example  variables.tf
montblanc_dbt/: dbt_project.yml  profiles.yml.example
montblanc_dbt/models/: sources.yml
montblanc_dbt/models/gold/: daily_conditions.sql  elevation_gradient.sql  monthly_conditions.sql  schema.yml  seasonal_summary.sql  summit_window.sql
montblanc_dbt/seeds/: summit_scoring_params.csv
resources/: montblanc_pipeline.job.yml
scratch/: README.md
src/montblanc_pipeline/: bronze.py  config.py  main.py  silver.py  utils.py
tests/: conftest.py  test_bronze.py  test_integration.py  test_main.py  test_silver.py  test_smoke.py  test_utils.py
